Updated project securely

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Chinmaya Mohanty</a>
+	      <a class="navbar-brand" href="index.html">PORTFOLIO</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -160,8 +160,8 @@
 						// Create an array of typing text
 						const typingTexts = [
 						'Engineer  ',
-						'Tech explorer  ',
-						'Ai engineer   ',
+						'Tech Explorer  ',
+						'Ai Engineer   ',
 						];
 
 						// Create a function to display the typing animation for a given text
@@ -270,7 +270,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>Hi, I’m an AI Engineer in the making who loves transforming data into intelligent solutions. My journey includes building impactful projects like ECG signal classification and animal detection using deep learning. I enjoy experimenting with models, improving accuracy, and deploying AI applications that can make a difference.
+								<p>Hi, I’m an AI Engineer in the making who loves transforming data into intelligent solutions. I enjoy experimenting with models, improving accuracy, and deploying AI applications that can make a difference.
 									 I’m always curious, always learning, and excited to work on innovative AI products that solve real-life challenges.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Ai Engineer</span></li>
@@ -288,7 +288,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="5">0</span> <span>+</span>
+									<span class="number" data-number="10">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://www.linkedin.com/in/chinmaya-mohanty-196089294" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
